[package]
name = "immix_rust"
version = "0.0.1"
authors = [ "Yi Lin <yi.lin@anu.edu.au>" ]
edition = "2018"

[lib]
name = "immix_rust"
path = "src/lib.rs"
crate-type = ["dylib"]

[[bin]]
name = "immix-rust"
path = "src/main.rs"

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []
mt-trace = []

[dependencies]
memmap = "0.2.2"
libc = "0.2.121"
lazy_static = "1.4.0"
log = "0.4.16"
crossbeam = "0.8.1"
simple_logger = "2.1.0"
parking_lot = "0.12.0"
