[package]
name = "immix_rust"
version = "0.0.1"
authors = [ "Yi Lin <yi.lin@anu.edu.au>" ]
edition = "2018"

[lib]
name = "immix_rust"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

#[[bin]]
#name = "benchmarks"
#path = "rust_benchmarks/main.rs"

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []
mt-trace = ["crossbeam"]

[dependencies]
memmap = "0.2.2"
lazy_static = "1.4.0"
log = "0.4.16"
simple_logger = "2.1.0"
parking_lot = "0.12.0"
generational-arena = "0.2.8"

[dependencies.crossbeam]
version = "0.8.1"
optional = true
