[package]
name = "immix_rust"
version = "0.0.1"
authors = [ "Yi Lin <yi.lin@anu.edu.au>" ]
edition = "2018"

[lib]
name = "immix_rust"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "benchmarks"
path = "rust_benchmarks/main.rs"

# Add debug information to release build to make it easier to look for hotspots with VTune
[profile.release]
debug = true

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []
mt-trace = []

[dependencies]
memmap2 = "0.5.3"
lazy_static = "1.4.0"
log = "0.4.16"
simple_logger = "2.1.0"
parking_lot = "0.12.0"
generational-arena = "0.2.8"
num_cpus = "1.13.1"
memsec = "0.6.0"
crossbeam = "0.8.1"


[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "large_alloc"
harness = false
